add example of moment support

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div data-bind="text: text"></div>
 
     <div data-bind="text: tsButtonText"></div>
+    <div data-bind="text: tsButtonDate"></div>
 
     <div data-bind="text: jsButtonText"></div>
     <div data-bind="text: jsButtonCommonText"></div>
     
     <script src="node_modules/knockout/build/output/knockout-latest.debug.js"></script>
+    <script src="node_modules/moment/moment.js"></script>
     <script src="dist/js-components/js-button/js-button.js"></script>
     <script src="dist/js-components/js-common/js-common.js"></script>
     <script src="dist/ts-components/ts-button/ts-button.js"></script>
