change google tslint rule, add component register function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <div data-bind="text: jsButtonText"></div>
     <div data-bind="text: jsButtonCommonText"></div>
+
+    <mnbutton params="instance: componentButtonConfiguration"></mnbutton>
+    <mnbutton params="instance: componentButtonConfiguration2"></mnbutton>
     
     <script src="node_modules/knockout/build/output/knockout-latest.debug.js"></script>
     <script src="node_modules/moment/moment.js"></script>
